...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f3f3f3"
    tools:context=".SortAndFilter">

    <ImageView
        android:id="@+id/closeBtn"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_marginTop="24dp"
        android:src="@drawable/x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.918"
...
        app:layout_constraintTop_toBottomOf="@+id/closeBtn">


    </TextView>

    <RatingBar
        android:id="@+id/ratingStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:numStars="5"
        android:stepSize="1"
        app:layout_constraintEnd_toEndOf="parent"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingStar">

        </TextView>

    <Switch
        android:id="@+id/switchSortName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:switchMinWidth="50dp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />


    <Button
        android:id="@+id/showSort"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp"
        android:fontFamily="sans-serif-condensed-light"
...
