...
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backbtn"
            android:layout_width="40sp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:src="@drawable/back">

        </ImageView>
    </RelativeLayout>
    <TextView
        android:id="@+id/ShowHotelName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="116dp"
        android:layout_marginRight="20sp"
        android:text="HotelName"
        android:fontFamily="sans-serif-condensed-light"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
...
